<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rPomme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rPomme" />

        <RadioButton
            android:id="@+id/rPoire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rPoire" />
    </RadioGroup>

    <Button
        android:id="@+id/bCompter"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bCompter" />

    <TextView
        android:id="@+id/labelPommes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/labelPommes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPommes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvPommes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelPoires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/labelPoires"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPoires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvPoires"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>